--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="overlays"></div>
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
   <script type="text/javascript">
